# npstreams

./: .gitignore  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  RELEASE-CHECKLIST.rst  appveyor.yml  benchmark.py  dev-requirements.txt  pyproject.toml  release-description.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml
benchmarks/: sum.py
docs/: api.rst  conf.py  conventions.rst  index.rst  installation.rst  recipes.rst  whatsnew.rst
docs/functions/: npstreams.ArrayStream.rst  npstreams.array_stream.rst  npstreams.average.rst  npstreams.benchmark.rst  npstreams.cyclic.rst  npstreams.idot.rst  npstreams.iflatten.rst  npstreams.ihistogram.rst  npstreams.iinner.rst  npstreams.iload.rst  npstreams.imax.rst  npstreams.imin.rst  npstreams.itercopy.rst  npstreams.last.rst  npstreams.length_hint.rst  npstreams.mean.rst  npstreams.nan_to_num.rst  npstreams.peek.rst  npstreams.pload.rst  npstreams.pmap_unordered.rst  npstreams.primed.rst  npstreams.prod.rst  npstreams.sem.rst  npstreams.stack.rst  npstreams.std.rst  npstreams.sum.rst  npstreams.var.rst
docs/source/: api.rst  conf.py  control_flow.rst  conventions.rst  cuda.rst  index.rst  installation.rst  making_your_own.rst  recipes.rst  references.txt
npstreams/: __init__.py  _utils.py  array_stream.py  array_utils.py  benchmarks.py  cuda.py  flow.py  iter_utils.py  iter_utils.pyx  linalg.py  numerics.py  parallel.py  reduce.py  stacking.py  stats.py  utils.py
npstreams/tests/: test_array_stream.py  test_array_utils.py  test_cuda.py  test_flow.py  test_iter_utils.py  test_linalg.py  test_numerics.py  test_parallel.py  (+3 more)
tests/: test_cuda.py  test_flow.py  test_iter_utils.py  test_linalg.py  test_numerics.py  test_parallel.py  test_reduce.py  test_stacking.py  test_stats.py
(+28 files in other folders)
